# workflows

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  checkgit.cmake  fetcher.cmake  pyproject.toml  setup.cfg  setup.py  version.hpp.in  version_info.py
.github/actions/cmake_ctest/: action.yml
.github/config/: gha-test-macos.yml  gha-test-ubuntu.yml  gha-test-windows.yml
.github/workflows/: build_cmake.yml  build_cmake_simplified.yml  build_deploy.yml  build_python_wheel.yml  main_push_pull_request.yml  package_deploy.yml
inactive_workflows/: build_cmake.yml  build_cmake_simplified.yml
module/: __init__.py  _version.py
module.egg-info/: PKG-INFO  SOURCES.txt
src/: CMakeLists.txt  version.hpp
tests/: test_basic.py
wrap/: CMakeLists.txt  _module.cpp
wrap/tests/: test_01.py
