[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.12",
    "setuptools_scm[toml]>=6.2",
    "numpy",
    "scikit-build",
    "ninja; platform_system!='Windows'",
    "conan"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
archs = ["auto64"]
test-command = "python -m unittest discover -s {project}/wrap/tests"
test-extras = ["test"]
skip = ["pp*"]
build-verbosity = 1
before-test = "pip install numpy"

[tools.cibuildwheel.macos]
archs = ["x86_64"]

[tools.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} -v {wheel}"
test-command = "python -m unittest discover -s {project}\\wrap\\tests"

[tool.setuptools_scm]

