[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cmake>=3.12",
	"setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "cd {project}/tests && pytest"
test-skip = ["*universal2:arm64"]

[tool.setuptools_scm]

